--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://max.github.io/Portafolio.git",
   "name": "personal-portafolio",
   "version": "0.1.0",
   "private": true,
